Change the UI, documenting API on swagger, fixing known bugs
